--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,6 @@
     "json-server": "^0.17.1"
   },
   "scripts": {
-    "server": "npx json-server --watch db.json --port 4000"
+    "server": "npx json-server --watch db.json --port 4000 --delay 3000"
   }
 }
